# finance-bench-retrieval

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment.yaml
configs/prompts/: agentic_search.yaml  correctness.yaml  qa.yaml
configs/retrieval/: agentic.yaml  bm25.yaml  dense.yaml  hybrid.yaml
dashboard/: data.js  index.html
data/processed/: chunks.json  financebench_examples.json
src/config/: loaders.py
src/evaluation/: answer_normalization.py  bootstrap.py  build_gold_alignment.py  correctness.py  evaluation_pipeline.py  experiment_tracker.py  gold_alignment.py  qa_metrics.py  retrieval_metrics.py
src/experiments/: run_agentic.py  run_all.py  run_bm25.py  run_dense.py  run_hybrid.py  setup_index.py
src/finance_bench/config/: loaders.py
src/finance_bench/evaluation/: bootstrap.py  build_gold_alignment.py  correctness.py  evaluation_pipeline.py  experiment_tracker.py  failure_analysis.py
src/finance_bench/experiments/: run_agentic.py  run_all.py  run_bm25.py  run_dense.py  run_hybrid.py  (+1 more)
src/ingest/: build_corpus.py  chunking.py  financebench_dataset.py  run_all.py  save_dataset.py
src/llm/: caching.py  claude_client.py  token_tracking.py
src/retrieval/: agentic.py  base.py  bm25.py  dense.py  fusion.py  hybrid.py  qdrant_client.py  reranking.py
src/types/: schemas.py
src/visualizations/: plots.py  tables.py
tests/: test_agentic_tools.py  test_bootstrap.py  test_chunking.py  test_correctness.py  test_metrics.py  test_retrieval.py  test_token_tracking.py
(+19 files in other folders)
